--- a/views/community/board.ejs
+++ b/views/community/board.ejs
@@ -147,17 +147,6 @@
             </div>
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
-                    <div class="post-preview">
-                        <a href="#">
-                            <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                            <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on September 24, 2022
-                        </p>
-                    </div>
                     <% postings.forEach((posting, index)=> { %>
                     <!-- Post preview-->
                     <div class="post-preview">
@@ -178,6 +167,19 @@
                             href="#!">Older Posts →</a></div>
                 </div>
             </div>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                    </li>
+                    <% for (var i = 1; i <= totalPages; i++) { %>
+                    <li class="page-item"><a class="page-link" href="/community/<%= category %>?page=<%= i %>"><%= i %></a></li>
+                    <% }; %>
+                    <li class="page-item">
+                        <a class="page-link" href="#">Next</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </body>
