--- a/design/src/img.css
+++ b/design/src/img.css
@@ -4,6 +4,7 @@
     position: relative;
     top: 8vh;
     width: 3vw;
+    animation: fadeIn 1s both;
   }
   
 .MainBackImg {
@@ -39,3 +40,15 @@
     max-height: 100%;
     opacity: 50%;
 }
+
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+  
+    to {
+      opacity: 3;
+      transform: none;
+    }
+  }
