add: animation in all page

--- a/design/src/pages/modal.css
+++ b/design/src/pages/modal.css
@@ -49,6 +49,7 @@
     padding: 30px;
     border-bottom: 1px solid #dee2e6;
     border-top: 1px solid #dee2e6;
+    font-family: "Nutio";
   }
   
   .modal > section > footer {
