--- a/design/src/mypage.css
+++ b/design/src/mypage.css
@@ -54,9 +54,10 @@
 .review_Div {
     display: inline-block;
     width: 70%;
+    min-height: 200px;
     border-radius: 2vh;
     background-color: #f7f7f7;
-    box-shadow: 3px 4px 10px 3px rgb(0 0 0 / 10%);
+    box-shadow: 3px 4px 10px 3px rgb(0 0 0 / 10%)
 }
 
 .review_comment_div {
