--- a/design/src/search.css
+++ b/design/src/search.css
@@ -17,7 +17,6 @@
 
 .cardDiv {
     text-align: center;
-    height: 45vh;
 }
 
 .SearchMainText {
@@ -25,6 +24,8 @@
     top: 1vw;
     color: #809FFF;
     font-size: calc(14px + 1vw);
+    font-family: "Nunito";
+    font-weight: bold;
 }
 
 .card1 {
@@ -201,16 +202,17 @@
 
 #description {
     display: inline-block;
-    width: 60vw;
-    height: 10vh;
+    width: 50vw;
+    height: 5vh;
     border: none;
-    box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, .1);
+    border-radius: 2vh;
+    box-shadow: 0.6em 0.6em 1.2em rgb(0 0 0 / 8%);
     padding: 1.5vh;
 }
 
 #description:focus {
     outline: none;
-    box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, .15);
+    box-shadow: 0.6em 0.6em 1.2em rgb(0 0 0 / 10%);
 }
 
 .SubmitBtnDiv {
@@ -228,11 +230,11 @@
     border-radius: 1vw;
     margin: 1vw;
     max-width: 70px;
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .1);
+    box-shadow: 0.3em 0.3em 1.2em rgb(0 0 0 / 8%);
 }
 
 #submitBtn:active {
-    box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, .1);
+    box-shadow: 0.3em 0.3em 1.2em rgb(0 0 0 / 10%);
 }
 
 .commentsNoneText {
