--- a/views/community/board.ejs
+++ b/views/community/board.ejs
@@ -162,21 +162,19 @@
                     <!-- Divider-->
                     <hr class="my-4" />
                     <% }) %>
-                    <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase"
-                            href="#!">Older Posts →</a></div>
                 </div>
             </div>
+            <!-- Pager -->
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
                     <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                        <a class="page-link" id="previous">Previous</a>
                     </li>
                     <% for (var i = 1; i <= totalPages; i++) { %>
                     <li class="page-item"><a class="page-link" href="/community/<%= category %>?page=<%= i %>"><%= i %></a></li>
                     <% }; %>
                     <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
+                        <a class="page-link" id="next">Next</a>
                     </li>
                 </ul>
             </nav>
