feat: add comments part

--- a/views/community/post.ejs
+++ b/views/community/post.ejs
@@ -167,6 +167,13 @@
                 </div>
             </div>
         </article>
+        <!-- Divider-->
+        <hr class="my-4" />
+        <div class="card">
+            <div class="card-body">
+                댓글 자리입니다.
+            </div>
+        </div>
     </div>
 </body>
 
