feat: :truck: change comments to reviews

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -366,7 +366,7 @@
                                         <button type="submit" class="btn btn-warning text-white">신고하기</button>
                                     </form>
                                     <% } %>
-                                    <a href="/comments/<%= result._id %>" target="_blank">
+                                    <a href="/reviews/<%= result._id %>" target="_blank">
                                         <button type="button" class="btn btn-primary">리뷰 보기</button>
                                     </a>
                                 </div>
