--- a/design/src/search.css
+++ b/design/src/search.css
@@ -108,6 +108,7 @@
     box-shadow: 1px 1px 7px 1px rgba(0, 0, 0, .1);
     background-color: #809FFF;
     color: white;
+    cursor: grab;
 }
 
 .symptom_level:hover {
