feat: 게시글 작성자 저장
브라우저에서는 '익명'이지만, 실제 DB에는 게시글 작성자가 저장됨.

--- a/views/community/write.ejs
+++ b/views/community/write.ejs
@@ -161,6 +161,7 @@
                         <!-- Divider-->
                         <hr class="my-4" />
                         <div class="d-flex justify-content-end mb-4">
+                            <input type="hidden" value="<%= user %>" name="writer">
                             <button type="submit" class="btn btn-primary">완료</button>
                         </div>
                     </form>
