feat: 프론트에서는 작성자가 아예 노출되지 않도록 변경

--- a/views/community/board.ejs
+++ b/views/community/board.ejs
@@ -164,9 +164,7 @@
                             <h2 class="post-title"><%= posting.title %></h2>
                         </a>
                         <p class="post-meta">
-                            Posted by
-                            <a href="#!"><%= posting.writer %></a>
-                            <%= posting.created_at.toLocaleString() %>
+                            Posted at <%= posting.created_at.toLocaleString() %>
                         </p>
                     </div>
                     <!-- Divider-->
