--- a/views/community/post.ejs
+++ b/views/community/post.ejs
@@ -158,9 +158,7 @@
                         <div class="post-heading">
                             <h1><%= posting.title %></h1>
                             <span class="meta">
-                                Posted by
-                                <a href="#!"><%= posting.writer %></a>
-                                <%= posting.created_at.toLocaleString() %>
+                                Posted at <%= posting.created_at.toLocaleString() %>
                             </span>
                         </div>
                     </div>
