--- a/views/admin/member.ejs
+++ b/views/admin/member.ejs
@@ -18,12 +18,12 @@
     <div class="container">
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link active" id="nav-comment-tab" data-toggle="tab" href="#nav-comment" role="tab" aria-controls="nav-comment" aria-selected="true">comment</a>
+                <a class="nav-item nav-link active" id="nav-review-tab" data-toggle="tab" href="#nav-review" role="tab" aria-controls="nav-review" aria-selected="true">review</a>
                 <a class="nav-item nav-link" id="nav-report-tab" data-toggle="tab" href="#nav-report" role="tab" aria-controls="nav-report" aria-selected="false">report</a>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="nav-comment" role="tabpanel" aria-labelledby="nav-comment-tab">
+            <div class="tab-pane fade show active" id="nav-review" role="tabpanel" aria-labelledby="nav-review-tab">
                 <table class="table table-hover table-sm">
                     <thead>
                         <tr>
@@ -35,13 +35,13 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <% comments_results.forEach((comment, index) => { %>
+                    <% reviews_results.forEach((review, index) => { %>
                         <tr>
                             <th scope="row"><%= index + 1 %></th>
-                            <td><%= comment.hospital_id[0].name %></td>
-                            <td><%= comment.created_at.toLocaleString() %></td>
-                            <td><%= comment.description %></td>
-                            <td><%= comment.is_deleted %></td>
+                            <td><%= review.hospital_id[0].name %></td>
+                            <td><%= review.created_at.toLocaleString() %></td>
+                            <td><%= review.description %></td>
+                            <td><%= review.is_deleted %></td>
                         </tr>
                     <% }) %>
                     </tbody>
