--- a/views/admin/member.ejs
+++ b/views/admin/member.ejs
@@ -18,12 +18,78 @@
     <div class="container">
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link active" id="nav-review-tab" data-toggle="tab" href="#nav-review" role="tab" aria-controls="nav-review" aria-selected="true">review</a>
+                <a class="nav-item nav-link active" id="nav-community-tab" data-toggle="tab" href="#nav-community" role="tab" aria-controls="nav-community" aria-selected="true">community</a>
+                <a class="nav-item nav-link" id="nav-comment-tab" data-toggle="tab" href="#nav-comment" role="tab" aria-controls="nav-comment" aria-selected="false">comment</a>
+                <a class="nav-item nav-link" id="nav-review-tab" data-toggle="tab" href="#nav-review" role="tab" aria-controls="nav-review" aria-selected="false">review</a>
                 <a class="nav-item nav-link" id="nav-report-tab" data-toggle="tab" href="#nav-report" role="tab" aria-controls="nav-report" aria-selected="false">report</a>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="nav-review" role="tabpanel" aria-labelledby="nav-review-tab">
+            <div class="tab-pane fade show active" id="nav-community" role="tabpanel" aria-labelledby="nav-community-tab">
+                <table class="table table-hover table-sm">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">제목</th>
+                            <th scope="col">작성일시</th>
+                            <th scope="col">삭제여부</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% communities_results.forEach((community, index)=> { %>
+                            <tr>
+                                <th scope="row">
+                                    <%= index + 1 %>
+                                </th>
+                                <td>
+                                    <%= community.title %>
+                                </td>
+                                <td>
+                                    <%= community.created_at.toLocaleString() %>
+                                </td>
+                                <td>
+                                    <%= community.is_deleted %>
+                                </td>
+                            </tr>
+                            <% }) %>
+                    </tbody>
+                </table>
+            </div>
+            <div class="tab-pane fade" id="nav-comment" role="tabpanel" aria-labelledby="nav-comment-tab">
+                <table class="table table-hover table-sm">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">게시글</th>
+                            <th scope="col">작성일시</th>
+                            <th scope="col">내용</th>
+                            <th scope="col">삭제여부</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% comments_results.forEach((comment, index)=> { %>
+                            <tr>
+                                <th scope="row">
+                                    <%= index + 1 %>
+                                </th>
+                                <td>
+                                    <%= comment.posting[0].title %>
+                                </td>
+                                <td>
+                                    <%= comment.created_at.toLocaleString() %>
+                                </td>
+                                <td>
+                                    <%= comment.description %>
+                                </td>
+                                <td>
+                                    <%= comment.is_deleted %>
+                                </td>
+                            </tr>
+                            <% }) %>
+                    </tbody>
+                </table>
+            </div>
+            <div class="tab-pane fade" id="nav-review" role="tabpanel" aria-labelledby="nav-review-tab">
                 <table class="table table-hover table-sm">
                     <thead>
                         <tr>
